# sortui

./: .gitignore  CMakeLists.txt  Makefile  testdata
include/: Alias.h  App.h  ArguHandler.h  Array.h  DataGenerator.h  HomePage.h  Int.h  Option.h  SetPage.h  Sort.h  SortView.h  Tools.h  UI.h  Utils.h
include/UI/: HomePage.h  SortView.h  UI.h
src/: App.cpp  ArguHandler.cpp  Array.cpp  Int.cpp  Sort.cpp  UI.cpp  helpMessage.cpp  homePage.cpp  main.cpp  setPage.cpp  sortView.cpp  timeformat.cpp
src/UI/: UI.cpp  homePage.cpp  setPage.cpp  sortView.cpp
